--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -43,7 +43,7 @@
 
 		<!-- FOR COPYRIGHT AND OTHER -->
 		<div class="row">
-			<div class="textbody1">
+			<div class="footer_text">
 				<div class="center">
 					Copyright McMaster Computer Science Society 2014<br>McMaster University | 1280 Main Street West | Hamilton, Ontario L8S4L8
 				</div>
