--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
 					</h3>
 				</div> <!-- End panel heading -->
 				<div class="panel-body">
-					<div class="textbody">
+					<div class="homepage_text">
 						text here.. link colour test: <a href="#">blah</a>
 					</div>
 				</div>
