--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,26 +15,32 @@
     </div>
 
     <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li><%= link_to "Events", events_path %></li>
-        <li><%= link_to "Merch", merch_path %></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><%= link_to "Resources Home", resources_path %></li>
-            <li class="divider"></li>
-            <li><%= link_to "Database", resources_database_path %></li>
-            <li><%= link_to "Class List", resources_classlist_path %></li>
-          </ul>
-        </li>
-      </ul>
+      <div class = "header_font_color">
+        <ul class="nav navbar-nav">
+          <li><%= link_to "Events", events_path %></li>
+          <li><%= link_to "Merch", merch_path %></li>
+
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Resources <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><%= link_to "Resources Home", resources_path %></li>
+              <li class="divider"></li>
+              <li><%= link_to "Database", resources_database_path %></li>
+              <li><%= link_to "Class List", resources_classlist_path %></li>
+            </ul>
+          </li>
+
+        </ul>
+      </div><!-- /.header font color -->
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-ex1-collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "About", about_path %></li>
-        <li><%= link_to "Contact", contact_path %></li>
-      </ul>
+      <div class="header_font_color">
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to "About", about_path %></li>
+          <li><%= link_to "Contact", contact_path %></li>
+        </ul>
+      </div><!-- /.header font color -->
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container -->
 </nav>
