Added content to Home/About/Contact pages

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -22,12 +22,12 @@ $navbar-inverse-link-hover-color: 		 #374af1;
 	text-align: left;
 }
 
-.homepage_text {
-	font: 16px 'PT Sans', sans-serif;
+.bottom {
+	vertical-align: bottom;
 }
 
-.header_font_color {
-
+.homepage_text {
+	font: 16px 'PT Sans', sans-serif;
 }
 
 .footer_text {
