--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,12 @@
 
 	<%= render 'layouts/header' %> <!-- HEADER/NAVBAR -->
 	<%= yield %> <!-- Page content -->
-	<%= render 'layouts/footer' %> <!-- FOOTER/SITEMAP -->
 
+  <footer>
+    <%= render 'layouts/footer' %> <!-- FOOTER/SITEMAP -->
+  </footer>
+	   
 </body>
+
+
 </html>
