--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,7 +1,25 @@
 <div class="container">
 
 	<div class="page-header">
-		<h1> Contact Page </h1>
+		<div class = "center">
+			<h1> Contact Page </h1>
+		</div>
 	</div>
 
+	<h3><u>Facebook group Links:</u></h3>
+	<div class="spacer5"></div>
+	<a href="https://www.facebook.com/mcmastercss"> McMaster Computer Science Society </a>
+	<div class="spacer5"></div>
+	<a href="https://www.facebook.com/groups/311139245624421/"> Computer Science General</a>
+	<div class="spacer5"></div>
+	<a href="https://www.facebook.com/groups/MacCompSci/"> 2015 Grads </a>
+	<div class="spacer5"></div>
+	<a href="https://www.facebook.com/groups/403109406427404/"> 2016 Grads </a>
+	<div class="spacer5"></div>
+	<a href="https://www.facebook.com/groups/558580180880325/"> 2017 Grads </a>
+
+	<div class="spacer15"></div>
+
+	<h3><u>Email</u></h3>
+	<address><a href ="mailto:css@mcmaster.ca"> css@mcmaster.ca </a> </address>
 </div>
