--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
 	<!-- PAGE HEADER -->
 	<div class="page-header">
-	  <h1>McMaster Computer Science Society</h1>
+		<div class = "center">
+	  		<h1>McMaster Computer Science Society</h1>
+	  	</div>
 	</div>
 
 	<!-- Including the carousel for the home page -->
@@ -12,30 +14,41 @@
 
 	<!-- Website content -->
 	<div class="row">
+
 		<div class="col-xs-12 col-md-8">
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h3 class="panel-title">
 						<div class="panelheading">
-							Welcome to the McMaster Computer Science Society homepage!
+							<div class="center">
+								Welcome to the McMaster Computer Science Society homepage!
+							</div>
 						</div>
 					</h3>
 				</div> <!-- End panel heading -->
 				<div class="panel-body">
 					<div class="homepage_text">
-						text here.. link colour test: <a href="#">blah</a>
+						<div class="center">
+							We here in the Computer Science Society are a dedicated group of Computer Science students who
+							represent the program within McMaster University. We provide opportunities for Computer Science students to connect, learn, and succeed. We have resources to help each student with each course they may take, and provide a central location for all information regarding the program.  We also plan to host various tutorials teaching the basics of programming and seminars to help with different key concepts regarding the field.
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 
+<!-- ===== TWITTER STREAM =========================================================================== -->
 		<div class="col-xs-12 col-md-4">
 			<div class="product-img">
 				<div class="center">
 					<a class="twitter-timeline" href="https://twitter.com/McMasterCompSci" data-widget-id="502566766283735040">Tweets by @McMasterCompSci</a>
-					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+					<script>
+						!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+					</script>
 				</div>
 			</div>
 		</div>
-	</div>
+
+	</div> <!-- End row -->
+
 </div> <!-- End container -->
