--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,27 @@
 <div class="container">
 
 	<div class="page-header">
-		<h1> About Page </h1>
+		<div class = "center">
+			<h1> About the Team! </h1>
+		</div>
+	</div>
+
+	
+	<div class="col-xs-12 col-md-8">
+		</div class = "center">
+				<div class="panel panel-default">
+					
+					<div class="panel-body">
+						<div class="homepage_text">
+							<div class="center">
+								We are the Executives of the Computer Science Society! 
+								Someone help me here!
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 
 </div>
