Added template design for team/Fixed mobile navbar

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,14 +9,12 @@
 	
 	<div class="col-xs-12 col-md-8">
 		</div class = "center">
-				<div class="panel panel-default">
-					
-					<div class="panel-body">
-						<div class="homepage_text">
-							<div class="center">
-								We are the Executives of the Computer Science Society! 
-								Someone help me here!
-							</div>
+			<div class="panel panel-default">
+				<div class="panel-body">
+					<div class="homepage_text">
+						<div class="center">
+							We are the Executives of the Computer Science Society! 
+							Someone help me here!
 						</div>
 					</div>
 				</div>
@@ -24,4 +22,43 @@
 		</div>
 	</div>
 
-</div>
+	<div class="spacer20"></div>
+
+	<!-- PRESIDENT =========================================================================-->
+	<div class="container">
+		<div class="media">
+			<a class="pull-left" href="#">
+		   		<%= image_tag("team/president.png", height: "120px") %>
+		  	</a>
+		    <div class="media-body">
+		    	<h4 class="media-heading">President</h4>
+		    </div>
+		    Rhett Amin is a 4th year Computer Science <br>
+		    student at McMaster University. He is responsible <br>
+		    for making executive decisions and helps to co-ordinate events.
+		</div>
+	</div>
+
+	<div class="spacer20"></div>
+
+	<!-- VICE PRESIDENT =====================================================================-->
+	<div class="container">
+		<div class="right">
+			<div class="media">
+				<a class="pull-right" href="#">
+			   		<%= image_tag("team/vpresident.png", height: "120px") %>
+			  	</a>
+			    <div class="media-body">
+			    	<h4 class="media-heading">Vice President</h4>
+			    </div>
+			    MD Fahim Rashad is a 3rd year Computer Science <br>
+			    student at McMaster University. He is responsible for <br>
+			    filling in when the president is absent and assists in his duties.
+			</div>
+		</div>
+	</div>
+
+	<div class="spacer20"></div>
+	
+
+</div> <!-- end Container -->
