--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,64 +1,295 @@
-<div class="container">
-
+<div class="container hidden-xs">
 	<div class="page-header">
-		<div class = "center">
-			<h1> About the Team! </h1>
-		</div>
+		<h1>CSS Executive Team</h1>
 	</div>
-
 	
-	<div class="col-xs-12 col-md-8">
-		</div class = "center">
+	<div class="row">
+		<div class="col-xs-12 col-md-10 col-md-offset-1">
 			<div class="panel panel-default">
 				<div class="panel-body">
-					<div class="homepage_text">
-						<div class="center">
-							We are the Executives of the Computer Science Society! 
-							Someone help me here!
-						</div>
+					<div class="textbody">
+						We are the Executives of the Computer Science Society! 
+						Someone help me here!
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<div class="spacer20"></div>
+	<hr>
 
-	<!-- PRESIDENT =========================================================================-->
-	<div class="container">
-		<div class="media">
-			<a class="pull-left" href="#">
-		   		<%= image_tag("team/president.png", height: "120px") %>
-		  	</a>
-		    <div class="media-body">
-		    	<h4 class="media-heading">President</h4>
-		    </div>
-		    Rhett Amin is a 4th year Computer Science <br>
-		    student at McMaster University. He is responsible <br>
-		    for making executive decisions and helps to co-ordinate events.
+	<!-- PRESIDENT -->
+	<div class="row">
+		<div class="col-md-4 col-xs-12">
+			<div class="panel panel-default">
+				<div class="product-img">
+					INSERT IMAGE HERE
+				</div>
+			</div>
 		</div>
-	</div>
 
-	<div class="spacer20"></div>
+		<div class="col-md-8 col-xs-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panelheading">
+						President
+					</div>
+				</div>
 
-	<!-- VICE PRESIDENT =====================================================================-->
-	<div class="container">
-		<div class="right">
-			<div class="media">
-				<a class="pull-right" href="#">
-			   		<%= image_tag("team/vpresident.png", height: "120px") %>
-			  	</a>
-			    <div class="media-body">
-			    	<h4 class="media-heading">Vice President</h4>
-			    </div>
-			    MD Fahim Rashad is a 3rd year Computer Science <br>
-			    student at McMaster University. He is responsible for <br>
-			    filling in when the president is absent and assists in his duties.
+				<div class="panel-body">
+					<div class="textbody1">
+						Rhett Amin
+					</div>
+					<hr>
+				</div>
 			</div>
 		</div>
 	</div>
 
-	<div class="spacer20"></div>
-	
+	<hr>
 
-</div> <!-- end Container -->
+	<!-- VICE PRESIDENT -->
+	<div class="row">
+		<div class="col-md-8 col-xs-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panelheading">
+						Vice President
+					</div>
+				</div>
+
+				<div class="panel-body">
+					<div class="textbody1">
+						MD Rashad
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-md-4 col-xs-12">
+			<div class="panel panel-default">
+				<div class="product-img">
+					INSERT IMAGE HERE
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<hr>
+
+	<!-- VP FINANCE -->
+	<div class="row">
+		<div class="col-md-4 col-xs-12">
+			<div class="panel panel-default">
+				<div class="product-img">
+					<%= image_tag("team/vpfinance.jpg") %>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-md-8 col-xs-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panelheading">
+						VP Finance
+					</div>
+				</div>
+
+				<div class="panel-body">
+					<div class="textbody">
+						Brandon Da Silva
+					</div>
+					<div class="spacer5"></div>
+					<div class="textbody1">
+						Brandon is a 4th year Honours Business Informatics student. His involvements on campus spread far and wide including academic and athletics with <br>
+						As the VP Finance, Brandon is responsible for the budget and funding the Computer Science Society gets annually. He also oversees the majority of the projects and events that require funding.<br>
+						You can get a hold of Brandon by clicking one of the links below!
+					</div>
+					<hr>
+					<!-- LINKS -->
+			        <a href="http://www.brandondasilva.com" target="_blank"><%= image_tag("social/url.png", height: "45px") %></a>
+			        <a href="http://ca.linkedin.com/in/brandondasilva" target="_blank"><%= image_tag("social/linkedin.png", height: "45px") %></a>
+			        <a href="http://twitter.com/bds_77" target="_blank"><%= image_tag("social/twitter.png", height: "45px") %></a>
+			        <a href="http://github.com/brandondasilva" target="_blank"><%= image_tag("social/github.png", height: "45px") %></a>
+			        <a href="mailto:dasilvbc@mcmaster.ca" target="_blank"><%= image_tag("social/email.png", height: "45px") %></a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<hr>
+
+	<!-- PROJECT MANAGER -->
+	<div class="row">
+		<div class="col-md-8 col-xs-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panelheading">
+						Project Manager
+					</div>
+				</div>
+
+				<div class="panel-body">
+					<div class="textbody1">
+						Noel Brett-Roostna
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-md-4 col-xs-12">
+			<div class="panel panel-default">
+				<div class="product-img">
+					INSERT IMAGE HERE
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<hr>
+
+	<!-- VP ADMINISTRATION -->
+	<div class="row">
+		<div class="col-md-4 col-xs-12">
+			<div class="panel panel-default">
+				<div class="product-img">
+					INSERT IMAGE HERE
+				</div>
+			</div>
+		</div>
+
+		<div class="col-md-8 col-xs-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panelheading">
+						VP Administration
+					</div>
+				</div>
+
+				<div class="panel-body">
+					<div class="textbody1">
+						Joy Hopper
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<hr>
+
+	<!-- VP COMMUNICATIONS -->
+	<div class="row">
+		<div class="col-md-8 col-xs-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panelheading">
+						VP Communications
+					</div>
+				</div>
+
+				<div class="panel-body">
+					<div class="textbody1">
+						Michael Liut
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-md-4 col-xs-12">
+			<div class="panel panel-default">
+				<div class="product-img">
+					INSERT IMAGE HERE
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<hr>
+
+	<!-- MES REP -->
+	<div class="row">
+		<div class="col-md-4 col-xs-12">
+			<div class="panel panel-default">
+				<div class="product-img">
+					INSERT IMAGE HERE
+				</div>
+			</div>
+		</div>
+
+		<div class="col-md-8 col-xs-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panelheading">
+						MES Representative
+					</div>
+				</div>
+
+				<div class="panel-body">
+					<div class="textbody1">
+						Ryan Lambert
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<hr>
+
+	<!-- EXTERNAL AFFAIRS -->
+	<div class="row">
+		<div class="col-md-8 col-xs-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panelheading">
+						External Affairs
+					</div>
+				</div>
+
+				<div class="panel-body">
+					<div class="textbody1">
+						James Anthony
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-md-4 col-xs-12">
+			<div class="panel panel-default">
+				<div class="product-img">
+					INSERT IMAGE HERE
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<hr>
+
+	<!-- WEBMASTER -->
+	<div class="row">
+		<div class="col-md-4 col-xs-12">
+			<div class="panel panel-default">
+				<div class="product-img">
+					INSERT IMAGE HERE
+				</div>
+			</div>
+		</div>
+
+		<div class="col-md-8 col-xs-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panelheading">
+						Webmaster
+					</div>
+				</div>
+
+				<div class="panel-body">
+					<div class="textbody1">
+						George Plukov
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<hr>
+</div> <!-- End Container -->
