--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,25 +1,107 @@
 <div class="container">
 
 	<div class="page-header">
-		<div class = "center">
-			<h1> Contact Page </h1>
+		<h1>Contact</h1>
+	</div>
+
+	<div class="row">
+		<div class="col-xs-12 col-md-6">
+			<div class="row">
+				<div class="col-md-2 col-xs-4">
+					<%= image_tag("social/facebook.png", height: "65px") %>
+				</div>
+				<div class="col-md-10 col-xs-8">
+					<div class="vr">
+						<div class="body">
+							<a href="https://www.facebook.com/mcmastercss" target="_blank">McMaster Computer Science Society</a>
+							<div class="spacer5"></div>
+							<a href="https://www.facebook.com/groups/311139245624421/" target="_blank">Computer Science General</a>
+							<div class="spacer5"></div>
+							<a href="https://www.facebook.com/groups/MacCompSci/" target="_blank">2015 Grads</a>
+							<div class="spacer5"></div>
+							<a href="https://www.facebook.com/groups/403109406427404/" target="_blank">2016 Grads</a>
+							<div class="spacer5"></div>
+							<a href="https://www.facebook.com/groups/558580180880325/" target="_blank">2017 Grads</a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="spacer15"></div>
+			<hr>
+
+			<div class="hidden-xs hidden-sm">
+				<div class="row">
+					<div class="col-md-2 col-xs-4">
+						<%= image_tag("social/twitter.png", height: "65px") %>
+					</div>
+
+					<div class="col-md-10 col-xs-8">	
+						<div class="vr-twitter">
+							<div class="body">
+								<a href="https://twitter.com/McMasterCompSci" target="_blank">McMaster Computer Science Society Twitter</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="hidden-md hidden-lg">
+				<div class="row">
+					<div class="col-md-2 col-xs-4">
+						<%= image_tag("social/twitter.png", height: "65px") %>
+					</div>
+
+					<div class="col-md-10 col-xs-8">	
+						<div class="vr-twitter">
+							<div class="body">
+								<a href="https://twitter.com/McMasterCompSci" target="_blank">McMaster Computer Science Society Twitter</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="spacer15"></div>
+				<hr>
+			</div>
+		</div>
+
+		<div class="spacer25"></div>
+
+		<div class="col-xs-12 col-md-6">
+			<div class="row">
+				<div class="col-md-2 col-xs-4">
+					<%= image_tag("social/github.png", height: "65px") %>
+				</div>
+
+				<div class="col-md-10 col-xs-8">
+					<div class="vr-github">
+						<div class="body">
+							<a href="https://github.com/CSSMcMaster/csswebsite" target="_blank">CSS Website Github Repository</a>
+							<div class="spacer5"></div>
+							<a href="https://github.com/CSSMcMaster/resourcedb" target="_blank">Resource Database Github Repository</a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="spacer15"></div>
+			<hr>
+
+			<div class="row">
+				<div class="col-md-2 col-xs-4">
+					<%= image_tag("social/email.png", height: "65px") %>
+				</div>
+
+				<div class="col-md-10 col-xs-8">
+					<div class="vr-em">
+						<div class="body">
+							<a href="mailto:css@mcmaster.ca">CSS Email</a>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 
-	<h3><u>Facebook group Links:</u></h3>
-	<div class="spacer5"></div>
-	<a href="https://www.facebook.com/mcmastercss"> McMaster Computer Science Society </a>
-	<div class="spacer5"></div>
-	<a href="https://www.facebook.com/groups/311139245624421/"> Computer Science General</a>
-	<div class="spacer5"></div>
-	<a href="https://www.facebook.com/groups/MacCompSci/"> 2015 Grads </a>
-	<div class="spacer5"></div>
-	<a href="https://www.facebook.com/groups/403109406427404/"> 2016 Grads </a>
-	<div class="spacer5"></div>
-	<a href="https://www.facebook.com/groups/558580180880325/"> 2017 Grads </a>
-
-	<div class="spacer15"></div>
-
-	<h3><u>Email</u></h3>
-	<address><a href ="mailto:css@mcmaster.ca"> css@mcmaster.ca </a> </address>
+	<div class="spacer30"></div>
 </div>
