--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,7 @@
 <div class="container">
 	<!-- PAGE HEADER -->
 	<div class="page-header">
-		<div class = "center">
-	  		<h1>McMaster Computer Science Society</h1>
-	  	</div>
+  		<h1>McMaster Computer Science Society</h1>
 	</div>
 
 	<!-- Including the carousel for the home page -->
@@ -20,24 +18,20 @@
 				<div class="panel-heading">
 					<h3 class="panel-title">
 						<div class="panelheading">
-							<div class="center">
-								Welcome to the McMaster Computer Science Society homepage!
-							</div>
+							Welcome to the McMaster Computer Science Society homepage!
 						</div>
 					</h3>
 				</div> <!-- End panel heading -->
 				<div class="panel-body">
-					<div class="homepage_text">
-						<div class="center">
-							We here in the Computer Science Society are a dedicated group of Computer Science students who
+					<div class="textbody1">
+						We here in the Computer Science Society are a dedicated group of Computer Science students who
 							represent the program within McMaster University. We provide opportunities for Computer Science students to connect, learn, and succeed. We have resources to help each student with each course they may take, and provide a central location for all information regarding the program.  We also plan to host various tutorials teaching the basics of programming and seminars to help with different key concepts regarding the field.
-						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 
-<!-- ===== TWITTER STREAM =========================================================================== -->
+		<!-- TWITTER STREAM -->
 		<div class="col-xs-12 col-md-4">
 			<div class="product-img">
 				<div class="center">
