--- a/app/views/pages/resources/classlist.html.erb
+++ b/app/views/pages/resources/classlist.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 
 	<div class="page-header">
-		<h1> Classlist Page </h1>
+		<h1>Computer Science Class List</h1>
 	</div>
 
 </div>
