--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,18 +1,19 @@
-<div class="jumbotron hidden-xs">
+<!-- FOR LARGE SCREENS -->
+<div class="jumbotron hidden-xs hidden-md">
 	<div class="container">
 		<!-- LOGO AND SOCIAL LINKS -->
 		<div class="row">
 			<div class="col-md-1 col-md-offset-2">
 				<div class="center">
 					<div class="spacer30"></div>
-					<%= image_tag("social/facebook.png", height: "70px") %>
+					<a href="https://www.facebook.com/mcmastercss" target="_blank"><%= image_tag("social/facebook.png", height: "70px") %></a>
 				</div>
 			</div>
 
 			<div class="col-md-1">
 				<div class="center">
 					<div class="spacer30"></div>
-					<%= image_tag("social/twitter.png", height: "70px") %>
+					<a href="https://twitter.com/McMasterCompSci" target="_blank"><%= image_tag("social/twitter.png", height: "70px") %>
 				</div>
 			</div>
 
@@ -27,14 +28,14 @@
 			<div class="col-md-1">
 				<div class="center">
 					<div class="spacer30"></div>
-					<%= image_tag("social/github.png", height: "70px") %>
+					<a href="https://github.com/CSSMcMaster" target="_blank"><%= image_tag("social/github.png", height: "70px") %></a>
 				</div>
 			</div>
 
 			<div class="col-md-1">
 				<div class="center">
 					<div class="spacer30"></div>
-					<%= image_tag("social/email.png", height: "70px") %>
+					<a href="mailto:css@mcmaster.ca"><%= image_tag("social/email.png", height: "70px") %></a>
 				</div>
 			</div>
 		</div>
@@ -45,8 +46,115 @@
 		<div class="row">
 			<div class="footer_text">
 				<div class="center">
-					Copyright McMaster Computer Science Society 2014<br>McMaster University | 1280 Main Street West | Hamilton, Ontario L8S4L8
+					Copyright McMaster Computer Science Society 2014 | <%= link_to "Sitemap", sitemap_path %><br>McMaster University | 1280 Main Street West | Hamilton, Ontario L8S4L8
 				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- FOR MEDIUM SCREENS -->
+<div class="jumbotron hidden-lg hidden-xs">
+	<div class="container">
+		<!-- LOGO AND SOCIAL LINKS -->
+		<div class="row">
+			<div class="col-md-1 col-md-offset-2">
+				<div class="center">
+					<div class="spacer30"></div>
+					<a href="https://www.facebook.com/mcmastercss" target="_blank"><%= image_tag("social/facebook.png", height: "70px") %></a>
+				</div>
+			</div>
+
+			<div class="col-md-1">
+				<div class="center">
+					<div class="spacer30"></div>
+					<a href="https://twitter.com/McMasterCompSci" target="_blank"><%= image_tag("social/twitter.png", height: "70px") %>
+				</div>
+			</div>
+
+			<div class="col-md-4">
+				<div class="center">
+					<div class="center">
+						<%= image_tag("logo/logo-sansbg2.png", height: "125px") %>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-1">
+				<div class="center">
+					<div class="spacer30"></div>
+					<a href="https://github.com/CSSMcMaster" target="_blank"><%= image_tag("social/github.png", height: "70px") %></a>
+				</div>
+			</div>
+
+			<div class="col-md-1">
+				<div class="center">
+					<div class="spacer30"></div>
+					<a href="mailto:css@mcmaster.ca"><%= image_tag("social/email.png", height: "70px") %></a>
+				</div>
+			</div>
+		</div>
+
+		<div class="spacer10"></div>
+
+		<!-- FOR COPYRIGHT AND OTHER -->
+		<div class="row">
+			<div class="footer_text">
+				<div class="center">
+					Copyright McMaster Computer Science Society 2014 | <%= link_to "Sitemap", sitemap_path %><br>McMaster University | 1280 Main Street West | Hamilton, Ontario L8S4L8
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- FOR SMALL SCREENS -->
+<div class="jumbotron hidden-lg hidden-md">
+	<div class="container">
+		<!-- LOGO AND SOCIAL LINKS -->
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="center">
+				<%= image_tag("logo/logo-sansbg2.png", height: "100px") %>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-3">
+				<div class="center">
+					<div class="spacer30"></div>
+					<a href="https://www.facebook.com/mcmastercss" target="_blank"><%= image_tag("social/facebook.png", height: "50px") %></a>
+				</div>
+			</div>
+
+			<div class="col-xs-3">
+				<div class="center">
+					<div class="spacer30"></div>
+					<a href="https://twitter.com/McMasterCompSci" target="_blank"><%= image_tag("social/twitter.png", height: "50px") %>
+				</div>
+			</div>
+
+			<div class="col-xs-3">
+				<div class="center">
+					<div class="spacer30"></div>
+					<a href="https://github.com/CSSMcMaster" target="_blank"><%= image_tag("social/github.png", height: "50px") %></a>
+				</div>
+			</div>
+
+			<div class="col-xs-3">
+				<div class="center">
+					<div class="spacer30"></div>
+					<a href="mailto:css@mcmaster.ca"><%= image_tag("social/email.png", height: "50px") %></a>
+				</div>
+			</div>
+		</div>
+
+		<div class="spacer20"></div>
+
+		<!-- FOR COPYRIGHT AND OTHER -->
+		<div class="row">
+			<div class="footer_text2">
+				Copyright McMaster Computer Science Society 2014 | <%= link_to "Sitemap", sitemap_path %><br>McMaster University | 1280 Main Street West | Hamilton, Ontario L8S4L8
 			</div>
 		</div>
 	</div>
