--- a/app/views/pages/merch.html.erb
+++ b/app/views/pages/merch.html.erb
@@ -1,7 +1,76 @@
 <div class="container">
 
 	<div class="page-header">
-		<h1> Merch Page </h1>
+		<h1>Club Merchandise</h1>
+	</div>
+
+	<div class="row">
+		<div class="col-md-5 col-xs-12">
+			<div class="panel panel-default">
+				<div class="product-img">
+					<%= image_tag("merch/tshirt.png") %>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-md-7 col-xs-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panelheading">
+						TShirts - $10
+					</div>
+				</div>
+
+				<div class="panel-body">
+					<div class="textbody">
+						Standard black TShirt with CSS logo screen printed on the front.<br>
+						Sizes: S, M, L, XL<br><br>
+						Current Quantities:<br>
+						Small - 10<br>
+						Medium - 20<br>
+						Large - 20<br>
+						XLarge - 10
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<hr>
+
+	<div class="row">
+		<div class="col-md-5 col-xs-12">
+			<div class="panel panel-default">
+				<div class="product-img">
+					<%= image_tag("merch/sweater.png") %>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-md-7 col-xs-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panelheading">
+						Custom and Standard Sweaters
+					</div>
+				</div>
+
+				<div class="panel-body">
+
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<hr>
+	<div class="col-md-4 col-md-offset-4">
+		<div class="panel panel-default">
+			<div class="panel-body">
+				<div class="textbody">
+					Stickers and Lanyards COMING SOON!
+				</div>
+			</div>
+		</div>
 	</div>
 
 </div>
