Updated about layout for different screen sizes

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-<div class="container hidden-xs">
+<div class="container hidden-xs hidden-sm">
 	<div class="page-header">
 		<h1>CSS Executive Team</h1>
 	</div>
@@ -37,7 +37,7 @@
 				</div>
 
 				<div class="panel-body">
-					<div class="textbody1">
+					<div class="textbody">
 						Rhett Amin
 					</div>
 					<hr>
@@ -59,7 +59,7 @@
 				</div>
 
 				<div class="panel-body">
-					<div class="textbody1">
+					<div class="textbody">
 						MD Rashad
 					</div>
 				</div>
@@ -79,7 +79,7 @@
 
 	<!-- VP FINANCE -->
 	<div class="row">
-		<div class="col-md-4 col-xs-12">
+		<div class="col-md-4">
 			<div class="panel panel-default">
 				<div class="product-img">
 					<%= image_tag("team/vpfinance.jpg") %>
@@ -87,7 +87,7 @@
 			</div>
 		</div>
 
-		<div class="col-md-8 col-xs-12">
+		<div class="col-md-8">
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<div class="panelheading">
@@ -130,7 +130,7 @@
 				</div>
 
 				<div class="panel-body">
-					<div class="textbody1">
+					<div class="textbody">
 						Noel Brett-Roostna
 					</div>
 				</div>
@@ -167,7 +167,7 @@
 				</div>
 
 				<div class="panel-body">
-					<div class="textbody1">
+					<div class="textbody">
 						Joy Hopper
 					</div>
 				</div>
@@ -188,7 +188,7 @@
 				</div>
 
 				<div class="panel-body">
-					<div class="textbody1">
+					<div class="textbody">
 						Michael Liut
 					</div>
 				</div>
@@ -225,7 +225,7 @@
 				</div>
 
 				<div class="panel-body">
-					<div class="textbody1">
+					<div class="textbody">
 						Ryan Lambert
 					</div>
 				</div>
@@ -246,7 +246,7 @@
 				</div>
 
 				<div class="panel-body">
-					<div class="textbody1">
+					<div class="textbody">
 						James Anthony
 					</div>
 				</div>
@@ -283,8 +283,40 @@
 				</div>
 
 				<div class="panel-body">
-					<div class="textbody1">
+					<div class="textbody">
 						George Plukov
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div> <!-- End Container -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- ======== FOR MOBILE ======== -->
+<div class="container hidden-md hidden-lg">
+	<div class="page-header">
+		<h1>CSS Executive Team</h1>
+	</div>
+	
+	<div class="row">
+		<div class="col-xs-12 col-md-10 col-md-offset-1">
+			<div class="panel panel-default">
+				<div class="panel-body">
+					<div class="textbody">
+						We are the Executives of the Computer Science Society! 
+						Someone help me here!
 					</div>
 				</div>
 			</div>
@@ -292,4 +324,277 @@
 	</div>
 
 	<hr>
+
+	<!-- PRESIDENT -->
+	<div class="row">
+		<div class="col-sm-4 col-xs-6">
+			<div class="panel panel-default">
+				<div class="product-img">
+					INSERT IMAGE HERE
+				</div>
+			</div>
+		</div>
+
+		<div class="col-sm-8 col-xs-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panelheading">
+						President
+					</div>
+				</div>
+
+				<div class="panel-body">
+					<div class="textbody">
+						Rhett Amin
+					</div>
+					<hr>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<hr>
+
+	<!-- VICE PRESIDENT -->
+	<div class="row">
+		<div class="col-sm-4 col-xs-6">
+			<div class="panel panel-default">
+				<div class="product-img">
+					INSERT IMAGE HERE
+				</div>
+			</div>
+		</div>
+
+		<div class="col-sm-8 col-xs-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panelheading">
+						Vice President
+					</div>
+				</div>
+
+				<div class="panel-body">
+					<div class="textbody">
+						MD Rashad
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<hr>
+
+	<!-- VP FINANCE -->
+	<div class="row">
+		<div class="col-sm-4 col-xs-6">
+			<div class="panel panel-default">
+				<div class="product-img">
+					<%= image_tag("team/vpfinance.jpg") %>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-sm-8 col-xs-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panelheading">
+						VP Finance
+					</div>
+				</div>
+
+				<div class="panel-body">
+					<div class="textbody">
+						Brandon Da Silva
+					</div>
+					<div class="spacer5"></div>
+					<div class="textbody1">
+						Brandon is a 4th year Honours Business Informatics student. His involvements on campus spread far and wide including academic and athletics with <br>
+						As the VP Finance, Brandon is responsible for the budget and funding the Computer Science Society gets annually. He also oversees the majority of the projects and events that require funding.<br>
+						You can get a hold of Brandon by clicking one of the links below!
+					</div>
+					<hr>
+					<!-- LINKS -->
+			        <a href="http://www.brandondasilva.com" target="_blank"><%= image_tag("social/url.png", height: "45px") %></a>
+			        <a href="http://ca.linkedin.com/in/brandondasilva" target="_blank"><%= image_tag("social/linkedin.png", height: "45px") %></a>
+			        <a href="http://twitter.com/bds_77" target="_blank"><%= image_tag("social/twitter.png", height: "45px") %></a>
+			        <a href="http://github.com/brandondasilva" target="_blank"><%= image_tag("social/github.png", height: "45px") %></a>
+			        <a href="mailto:dasilvbc@mcmaster.ca" target="_blank"><%= image_tag("social/email.png", height: "45px") %></a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<hr>
+
+	<!-- PROJECT MANAGER -->
+	<div class="row">
+		<div class="col-sm-4 col-xs-6">
+			<div class="panel panel-default">
+				<div class="product-img">
+					INSERT IMAGE HERE
+				</div>
+			</div>
+		</div>
+
+		<div class="col-sm-8 col-xs-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panelheading">
+						Project Manager
+					</div>
+				</div>
+
+				<div class="panel-body">
+					<div class="textbody">
+						Noel Brett-Roostna
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<hr>
+
+	<!-- VP ADMINISTRATION -->
+	<div class="row">
+		<div class="col-sm-4 col-xs-6">
+			<div class="panel panel-default">
+				<div class="product-img">
+					INSERT IMAGE HERE
+				</div>
+			</div>
+		</div>
+
+		<div class="col-sm-8 col-xs-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panelheading">
+						VP Administration
+					</div>
+				</div>
+
+				<div class="panel-body">
+					<div class="textbody">
+						Joy Hopper
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<hr>
+
+	<!-- VP COMMUNICATIONS -->
+	<div class="row">
+		<div class="col-sm-4 col-xs-6">
+			<div class="panel panel-default">
+				<div class="product-img">
+					INSERT IMAGE HERE
+				</div>
+			</div>
+		</div>
+
+		<div class="col-sm-8 col-xs-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panelheading">
+						VP Communications
+					</div>
+				</div>
+
+				<div class="panel-body">
+					<div class="textbody">
+						Michael Liut
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<hr>
+
+	<!-- MES REP -->
+	<div class="row">
+		<div class="col-sm-4 col-xs-6">
+			<div class="panel panel-default">
+				<div class="product-img">
+					INSERT IMAGE HERE
+				</div>
+			</div>
+		</div>
+
+		<div class="col-sm-8 col-xs-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panelheading">
+						MES Representative
+					</div>
+				</div>
+
+				<div class="panel-body">
+					<div class="textbody">
+						Ryan Lambert
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<hr>
+
+	<!-- EXTERNAL AFFAIRS -->
+	<div class="row">
+		<div class="col-sm-4 col-xs-6">
+			<div class="panel panel-default">
+				<div class="product-img">
+					INSERT IMAGE HERE
+				</div>
+			</div>
+		</div>
+
+		<div class="col-sm-8 col-xs-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panelheading">
+						External Affairs
+					</div>
+				</div>
+
+				<div class="panel-body">
+					<div class="textbody">
+						James Anthony
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<hr>
+
+	<!-- WEBMASTER -->
+	<div class="row">
+		<div class="col-sm-4 col-xs-6">
+			<div class="panel panel-default">
+				<div class="product-img">
+					INSERT IMAGE HERE
+				</div>
+			</div>
+		</div>
+
+		<div class="col-sm-8 col-xs-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panelheading">
+						Webmaster
+					</div>
+				</div>
+
+				<div class="panel-body">
+					<div class="textbody">
+						George Plukov
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div> <!-- End Container -->
