Footer, Events and Resources updated
Footer is fully responsive
Events and Resources have just barely been started

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -27,6 +27,10 @@ $navbar-inverse-link-hover-color: 		 #374af1;
 	vertical-align: bottom;
 }
 
+.v-center {
+	vertical-align: center;
+}
+
 /* Text */
 .footer_text {
 	font: 16px 'OCR A Std';
@@ -181,4 +185,8 @@ $navbar-inverse-link-hover-color: 		 #374af1;
 
 .spacer35 {
 	height: 35px;
+}
+
+.spacer65 {
+	height: 65px;
 }
