--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <!-- FOR LARGE SCREENS -->
-<div class="jumbotron hidden-xs hidden-md">
+<div class="jumbotron hidden-xs hidden-md hidden-sm">
 	<div class="container">
 		<!-- LOGO AND SOCIAL LINKS -->
 		<div class="row">
@@ -13,14 +13,14 @@
 			<div class="col-md-1">
 				<div class="center">
 					<div class="spacer30"></div>
-					<a href="https://twitter.com/McMasterCompSci" target="_blank"><%= image_tag("social/twitter.png", height: "70px") %>
+					<a href="https://twitter.com/McMasterCompSci" target="_blank"><%= image_tag("social/twitter.png", height: "70px") %></a>
 				</div>
 			</div>
 
 			<div class="col-md-4">
 				<div class="center">
 					<div class="center">
-						<%= image_tag("logo/logo-sansbg2.png", height: "125px") %>
+						<%= image_tag("logo/logo-sansbg2.png", height: "115px") %>
 					</div>
 				</div>
 			</div>
@@ -46,7 +46,7 @@
 		<div class="row">
 			<div class="footer_text">
 				<div class="center">
-					Copyright McMaster Computer Science Society 2014 | <%= link_to "Sitemap", sitemap_path %><br>McMaster University | 1280 Main Street West | Hamilton, Ontario L8S4L8
+					Copyright McMaster Computer Science Society 2014 | <%= link_to "Sitemap", sitemap_path %><br>McMaster University | 1280 Main Street West | Hamilton, Ontario L8S 4L8
 				</div>
 			</div>
 		</div>
@@ -54,28 +54,28 @@
 </div>
 
 <!-- FOR MEDIUM SCREENS -->
-<div class="jumbotron hidden-lg hidden-xs">
+<div class="jumbotron hidden-lg hidden-sm hidden-xs">
 	<div class="container">
 		<!-- LOGO AND SOCIAL LINKS -->
 		<div class="row">
 			<div class="col-md-1 col-md-offset-2">
 				<div class="center">
 					<div class="spacer30"></div>
-					<a href="https://www.facebook.com/mcmastercss" target="_blank"><%= image_tag("social/facebook.png", height: "70px") %></a>
+					<a href="https://www.facebook.com/mcmastercss" target="_blank"><%= image_tag("social/facebook.png", height: "55px") %></a>
 				</div>
 			</div>
 
 			<div class="col-md-1">
 				<div class="center">
 					<div class="spacer30"></div>
-					<a href="https://twitter.com/McMasterCompSci" target="_blank"><%= image_tag("social/twitter.png", height: "70px") %>
+					<a href="https://twitter.com/McMasterCompSci" target="_blank"><%= image_tag("social/twitter.png", height: "55px") %></a>
 				</div>
 			</div>
 
 			<div class="col-md-4">
 				<div class="center">
 					<div class="center">
-						<%= image_tag("logo/logo-sansbg2.png", height: "125px") %>
+						<%= image_tag("logo/logo-sansbg2.png", height: "105px") %>
 					</div>
 				</div>
 			</div>
@@ -83,14 +83,14 @@
 			<div class="col-md-1">
 				<div class="center">
 					<div class="spacer30"></div>
-					<a href="https://github.com/CSSMcMaster" target="_blank"><%= image_tag("social/github.png", height: "70px") %></a>
+					<a href="https://github.com/CSSMcMaster" target="_blank"><%= image_tag("social/github.png", height: "55px") %></a>
 				</div>
 			</div>
 
 			<div class="col-md-1">
 				<div class="center">
 					<div class="spacer30"></div>
-					<a href="mailto:css@mcmaster.ca"><%= image_tag("social/email.png", height: "70px") %></a>
+					<a href="mailto:css@mcmaster.ca"><%= image_tag("social/email.png", height: "55px") %></a>
 				</div>
 			</div>
 		</div>
@@ -101,7 +101,7 @@
 		<div class="row">
 			<div class="footer_text">
 				<div class="center">
-					Copyright McMaster Computer Science Society 2014 | <%= link_to "Sitemap", sitemap_path %><br>McMaster University | 1280 Main Street West | Hamilton, Ontario L8S4L8
+					Copyright McMaster Computer Science Society 2014 | <%= link_to "Sitemap", sitemap_path %><br>McMaster University | 1280 Main Street West | Hamilton, Ontario L8S 4L8
 				</div>
 			</div>
 		</div>
@@ -115,46 +115,47 @@
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="center">
-				<%= image_tag("logo/logo-sansbg2.png", height: "100px") %>
+					<%= image_tag("logo/logo-sansbg2.png", height: "90px") %>
 				</div>
 			</div>
 		</div>
+
 		<div class="row">
 			<div class="col-xs-3">
 				<div class="center">
 					<div class="spacer30"></div>
-					<a href="https://www.facebook.com/mcmastercss" target="_blank"><%= image_tag("social/facebook.png", height: "50px") %></a>
+					<a href="https://www.facebook.com/mcmastercss" target="_blank"><%= image_tag("social/facebook.png", height: "65px") %></a>
 				</div>
 			</div>
 
 			<div class="col-xs-3">
 				<div class="center">
 					<div class="spacer30"></div>
-					<a href="https://twitter.com/McMasterCompSci" target="_blank"><%= image_tag("social/twitter.png", height: "50px") %>
+					<a href="https://twitter.com/McMasterCompSci" target="_blank"><%= image_tag("social/twitter.png", height: "65px") %></a>
 				</div>
 			</div>
 
 			<div class="col-xs-3">
 				<div class="center">
 					<div class="spacer30"></div>
-					<a href="https://github.com/CSSMcMaster" target="_blank"><%= image_tag("social/github.png", height: "50px") %></a>
+					<a href="https://github.com/CSSMcMaster" target="_blank"><%= image_tag("social/github.png", height: "65px") %></a>
 				</div>
 			</div>
 
 			<div class="col-xs-3">
 				<div class="center">
 					<div class="spacer30"></div>
-					<a href="mailto:css@mcmaster.ca"><%= image_tag("social/email.png", height: "50px") %></a>
+					<a href="mailto:css@mcmaster.ca"><%= image_tag("social/email.png", height: "65px") %></a>
 				</div>
-			</div>
+			</div>	
 		</div>
 
-		<div class="spacer20"></div>
+		<div class="spacer30"></div>
 
 		<!-- FOR COPYRIGHT AND OTHER -->
 		<div class="row">
 			<div class="footer_text2">
-				Copyright McMaster Computer Science Society 2014 | <%= link_to "Sitemap", sitemap_path %><br>McMaster University | 1280 Main Street West | Hamilton, Ontario L8S4L8
+				Copyright McMaster Computer Science Society 2014 | <%= link_to "Sitemap", sitemap_path %><br>McMaster University | 1280 Main Street West | Hamilton, Ontario L8S 4L8
 			</div>
 		</div>
 	</div>
