added event template

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -179,6 +179,10 @@ $navbar-inverse-link-hover-color: 		 #374af1;
 	height: 20px;
 }
 
+.spacer25 {
+	height: 25px;
+}
+
 .spacer30 {
 	height: 30px;
 }
