--- a/app/views/pages/events.html.erb
+++ b/app/views/pages/events.html.erb
@@ -4,4 +4,37 @@
 		<h1>Events</h1>
 	</div>
 
+	<hr>
+
+	<!-- PRESIDENT -->
+	<div class="row">
+		<div class="col-md-3 col-xs-12">
+			<div class="panel panel-default" style="width:200px">
+				<div class="product-img">
+					<%= image_tag("events/mixer200.png") %>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-md-8 col-xs-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="panelheading">
+						Opening Mixer
+					</div>
+				</div>
+
+				<div class="panel-body">
+					<div class="textbody">
+						Mixer description
+					</div>
+					<hr>
+					<a href="#"> Link to event here </a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<hr>
+
 </div>
